# CUDA_practice

./: README.md
1/: README.md  hello.cu  hello_world.hpp  main.cpp  test.cu
2/sum_array/: CMakeLists.txt  sumArraysOnGpu.cu  sumArraysOnGpu.hpp  sumArraysOnHost.cpp
